spaces/public/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
  namespace: public
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: devailab.work
      http:
        paths:
          - path: /helloapi(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: helloapi
                port:
                  number: 8000
